add filter for candidate
