# internal/dto/candidate_filter.go
@@ -1,0 +1,8 @@
+package dto
+
+type CandidateFilter struct {
+	AIMatchMin int      `form:"ai_match"`
+	Skills     []string `form:"skills"`
+	City       string   `form:"city"`
+	Position   string   `form:"position"`
+}
